--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,8 @@
     <title>Model-View-Presenter</title>
 </head>
 <body>
-<div id="app"></div>
+<div id="box-react"></div>
+<div id="box-vue"></div>
 <script type="text/javascript" src="./bundle.js"></script>
 </body>
 </html>
